[gd_scene load_steps=13 format=3 uid="uid://b4y76w0pw24cw"]

[ext_resource type="Script" uid="uid://crgj28xyrw1i" path="res://Scripts/menu_inicio.gd" id="1_lc4t7"]
[ext_resource type="Texture2D" uid="uid://eigh5ki4ork0" path="res://Images/castillo8bit.png" id="2_32rtn"]
[ext_resource type="FontFile" uid="uid://bgl0v5xd6gctg" path="res://Fonts/alagard.ttf" id="3_fok73"]
[ext_resource type="AudioStream" uid="uid://dms543h5h7xro" path="res://Sounds/Charlie's Here - Pizza Parlor  Club Penguin OST.mp3" id="4_32rtn"]
[ext_resource type="Script" uid="uid://cp8xdnhee7f2n" path="res://Scripts/audio_control.gd" id="5_fok73"]
[ext_resource type="Texture2D" uid="uid://cmrmw8dbbf1cm" path="res://Images/Vol max.png" id="6_hqhtn"]
[ext_resource type="Texture2D" uid="uid://cnwuu0jhjfncy" path="res://Images/Vol medio.png" id="7_aw1rd"]
[ext_resource type="Texture2D" uid="uid://df8pgtaq27yii" path="res://Images/Vol min.png" id="8_kv616"]
[ext_resource type="Texture2D" uid="uid://bkftk4agblbr6" path="res://Images/Vol mute.png" id="9_nt7jt"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_32rtn"]
color = Color(1, 1, 1, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fok73"]
color = Color(0.215686, 0.337255, 1, 1)
thickness = 5

[sub_resource type="ImageTexture" id="ImageTexture_hqhtn"]

[node name="MenuInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lc4t7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.337684, 0.68955, 0.822377, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 652.0
texture = ExtResource("2_32rtn")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -127.0
offset_right = 192.5
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="Play" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fok73")
theme_override_font_sizes/font_size = 45
text = "Jugar"

[node name="Options" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fok73")
theme_override_font_sizes/font_size = 45
text = "Opciones"

[node name="Quit" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fok73")
theme_override_font_sizes/font_size = 45
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_32rtn")
autoplay = true
bus = &"Music"

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = -201.0
offset_right = 302.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleOpt" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.5
offset_top = 13.0
offset_right = -1.5
offset_bottom = 42.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_fok73")
theme_override_font_sizes/font_size = 30
text = "Opciones"
horizontal_alignment = 1

[node name="BackMenu" type="Button" parent="Options"]
layout_mode = 2
offset_left = 103.0
offset_top = 338.0
offset_right = 488.0
offset_bottom = 389.0
theme_override_fonts/font = ExtResource("3_fok73")
theme_override_font_sizes/font_size = 45
text = "Atras"

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 173.0
offset_top = 82.0
offset_right = 412.0
offset_bottom = 126.0
theme_override_styles/slider = SubResource("StyleBoxLine_32rtn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_fok73")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_fok73")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_fok73")
audio_bus_name = "Music"
vol_max = ExtResource("6_hqhtn")
vol_medio = ExtResource("7_aw1rd")
vol_min = ExtResource("8_kv616")
vol_mute = ExtResource("9_nt7jt")

[node name="VolumeImage" type="TextureRect" parent="Options"]
layout_mode = 0
offset_left = 67.0
offset_top = 67.0
offset_right = 136.0
offset_bottom = 136.0
texture = SubResource("ImageTexture_hqhtn")

[node name="FullScreen" type="CheckBox" parent="Options"]
layout_mode = 0
offset_left = 173.0
offset_top = 132.0
offset_right = 397.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("3_fok73")
theme_override_font_sizes/font_size = 24
text = "Pantalla Completa"

[connection signal="pressed" from="MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/BackMenu" to="." method="_on_back_menu_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullScreen" to="." method="_on_check_box_toggled"]
